--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                 <h1 class="box-headline letters rotate-2">
                     <span class="box-words-wrapper">
                         <b class="is-visible">I&nbsp;am&nbsp;uno.</b>
-                        <b>&nbsp;&nbsp;&nbsp;software&nbsp;QA.</b>
-                        <b>&nbsp;&nbsp;&nbsp;Game&nbsp;Tester.</b>
-                        <b>&nbsp;IoT&nbsp;Enthusiast.</b>
+                        <b>&nbsp;QA.</b>
+                        <b>&nbsp;Game&nbsp;Tester.</b>
+                        <b>&nbsp;IoT</b>
                     </span>
 		        </h1>
                 <h5>welcome to my personal portfolio.</h5>
